--- a/Android/scenes/show/src/main/res/layout/show_live_link_request_message_list.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_request_message_list.xml
@@ -29,14 +29,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/iBtnStopLinkText"
+        android:id="@+id/iBtnStopLink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="@string/show_stop_linking"
         android:textColor="@drawable/show_purple"
-        android:visibility="gone"
         android:drawablePadding="6dp"
+        android:visibility="gone"
         android:drawableEnd="@mipmap/show_stop_link_or_pk_btn"
         app:layout_constraintBottom_toBottomOf="@id/textLinking"
         app:layout_constraintEnd_toEndOf="@id/textLinking"
