--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
@@ -50,35 +50,55 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/ivMusicStart"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+        android:layout_width="26dp"
+        android:layout_height="36dp"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="0dp"
         android:insetLeft="0dp"
         android:insetTop="0dp"
         android:insetRight="0dp"
         android:insetBottom="0dp"
         android:minWidth="0dp"
         android:padding="0dp"
-        android:src="@mipmap/ktv_ic_pause"
+        android:text="@string/ktv_room_player_pause"
+        android:textAppearance="?android:attr/textAppearanceButton"
+        android:textColor="#9BA2AB"
+        android:textSize="8sp"
+        app:backgroundTint="@android:color/transparent"
+        app:cornerRadius="6dp"
+        app:icon="@mipmap/ktv_ic_pause"
+        app:iconGravity="top"
+        app:iconPadding="0dp"
+        app:iconTintMode="src_atop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/ivChangeSong"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+        android:layout_width="26dp"
+        android:layout_height="36dp"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="0dp"
         android:insetLeft="0dp"
         android:insetTop="0dp"
         android:insetRight="0dp"
         android:insetBottom="0dp"
         android:minWidth="0dp"
         android:padding="0dp"
-        android:src="@mipmap/ic_play_next"
+        android:text="@string/ktv_room_change_song"
+        android:textAppearance="?android:attr/textAppearanceButton"
+        android:textColor="#9BA2AB"
+        android:textSize="8sp"
+        app:backgroundTint="@android:color/transparent"
+        app:cornerRadius="6dp"
+        app:icon="@mipmap/ic_play_next"
+        app:iconGravity="top"
+        app:iconPadding="0dp"
+        app:iconTintMode="src_atop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/ivMusicStart" />
 
@@ -144,37 +164,56 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <androidx.appcompat.widget.AppCompatCheckBox
-        android:id="@+id/switchOriginal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:button="@mipmap/ic_original_song"
-        android:checked="true"
-        android:text="@string/ktv_room_original"
-        android:textColor="#9BA2AB"
-        app:layout_constraintBottom_toBottomOf="@id/ivMusicStart"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/ivMusicStart"
-        app:switchPadding="12dp" />
-
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/ivMusicMenu"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:id="@+id/switchOriginal"
+        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+        android:layout_width="26dp"
+        android:layout_height="36dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="0dp"
+        android:background="@null"
+        android:checkable="true"
         android:insetLeft="0dp"
         android:insetTop="0dp"
         android:insetRight="0dp"
         android:insetBottom="0dp"
         android:minWidth="0dp"
         android:padding="0dp"
+        android:text="@string/ktv_room_original"
         android:textAppearance="?android:attr/textAppearanceButton"
-        app:icon="@mipmap/ktv_ic_settings"
-        app:iconGravity="textStart"
+        android:textColor="#9BA2AB"
+        android:textSize="8sp"
+        app:backgroundTint="@android:color/transparent"
+        app:cornerRadius="6dp"
+        app:icon="@mipmap/ic_play_original_off"
+        app:iconGravity="top"
         app:iconPadding="0dp"
-        app:iconTint="@android:color/transparent"
+        app:iconTintMode="multiply"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/ivMusicMenu"
+        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="0dp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        android:minWidth="0dp"
+        android:padding="0dp"
+        android:text="@string/ktv_room_player_tweak"
+        android:textAppearance="?android:attr/textAppearanceButton"
+        android:textColor="#9BA2AB"
+        android:textSize="8sp"
+        app:backgroundTint="@android:color/transparent"
+        app:cornerRadius="6dp"
+        app:icon="@mipmap/ktv_ic_settings"
+        app:iconGravity="top"
+        app:iconPadding="0dp"
         app:iconTintMode="src_atop"
         app:layout_constraintBottom_toBottomOf="@id/ivMusicStart"
         app:layout_constraintEnd_toStartOf="@id/switchOriginal"
