--- a/Android/scenes/ktv/src/main/res/layout/fragment_effect_voice2.xml
+++ b/Android/scenes/ktv/src/main/res/layout/fragment_effect_voice2.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/bg_full_blue_top_20"
         android:orientation="vertical">
 
